added pro's and con's to knn

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -450,7 +450,19 @@ Scaling your data should be a part of the pre-processing you do before you start
 
 > What about centering the data? I've heard that is also a data pre-processing step? Yes, it can be helpful but it depends on the algorithm. For k-nn classification centering doesn't help, nor does it hurt. So you can do it if you would like but you do not have to.
 
+## Strengths and limitations of k-nn classification
 
+#### Strengths of k-nn classification
+
+1. Simple and easy to understand
+2. No assumptions about what the data must look like 
+3. Works easily for binary (two-class) and multi-class (> 2 classes) classification problems
+
+#### Limitations of k-nn classification
+
+1. As data gets bigger and bigger, k-nn gets slower and slower, quite quickly
+2. Does not perform well with a large number of predictors
+3. Does not perform well when classes are imbalanced (when many more observations are in one of the classes compared to the others)
 
 ## Additional readings/resources
 - [The `caret` Package](https://topepo.github.io/caret/index.html)
