more bias variance

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -212,7 +212,7 @@ From the plots above, we see that when $k$ = 1, the blue line runs perfectly thr
 
 What about the plot where $k$ is quite large, say $k$ = 450 for example? When $k$ = 450 for this data set the blue line is extremely smooth, and almost flat. This happens because our predicted values for a given region, depend on many many neighbouring observations, 450 to be exact! A model like this model has low variance and consequently high bias. It has low variance because the smooth, inflexible blue line does not follow the training observations very closely, and if we were to change any one of the training observation data points it really wouldn't affect the shape of the smooth blue line at all. It has high bias because the model/predicted values does not match the actual observed values very well. 
 
-What we want, is a model with low variance (so that it will transer/generalize well to other data sets, and isn't too dependent on the observations that happen to be in the training set we had) AND low bias (one where the model/predicted values matches the actual observed values very well). 
+What we want, is a model with low variance (so that it will transer/generalize well to other data sets, and isn't too dependent on the observations that happen to be in the training set we had) AND low bias (one where the model/predicted values matches the actual observed values very well). If we explore the other values for $k$, in particular $k$ = 56 (the optimal $k$ as suggested by cross-validation), we can see it has a lower bias than our model with a very high $k$ (e.g., 450), and thus the model/predicted values better match the actual observed values than the high $k$ model. Additionally, it has lower variance than our model with a very low $k$ (e.g., 1) and thus it should transer/generalize well to other data sets than the low $k$ model.
 
 ## Assessing model goodness with the test set
 
